--- a/Linear_Regression/multiVariateLinearRegression.ipynb
+++ b/Linear_Regression/multiVariateLinearRegression.ipynb
@@ -88,6 +88,127 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "source": [
+    "#Creating new Variables\n",
+    "dataset['Smoker_int']=dataset['smoker'].map({'yes':1, 'no':0})\n",
+    "x=dataset[['age', 'bmi', 'Smoker_int']]\n",
+    "y=dataset['charges']"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "source": [
+    "x_train, x_test, y_train, y_test=train_test_split(x, y, shuffle=True, train_size=0.3)\n",
+    "multiVar_model2=LinearRegression()\n",
+    "multiVar_model2.fit(x_train, y_train)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "source": [
+    "predictions=multiVar_model2.predict(x_test)\n",
+    "r2=r2_score(y_test, predictions)\n",
+    "rmse=mean_squared_error(y_test, predictions, squared=False)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "source": [
+    "print(r2)\n",
+    "print(rmse)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.7557561893584342\n",
+      "5938.276198490477\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "source": [
+    "#If you’re satisfied with the data, you can actually turn the linear model into a function. \n",
+    "# With this function, you can then pass in new data points to make predictions about what a person’s charges may be.\n",
+    "#The model has two attributes:\n",
+    " #   .coef_ which stores an array of the coefficients of our model\n",
+    " #   .intercept_ which stores the y-intercept of our linear model\n",
+    "coefficients=multiVar_model2.coef_\n",
+    "intercept=multiVar_model2.intercept_\n",
+    "print(coefficients)\n",
+    "# 3 coeffs.. because we have 3 dependent variables and 1 independent var \n",
+    "print(intercept)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[  277.79989422   381.24916954 23001.28195803]\n",
+      "-13867.302318147033\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "source": [
+    "def calculate_charges(age, bmi, smoker):\n",
+    "  return (age * coefficients[0]) + (bmi * coefficients[1]) + (smoker * coefficients[2]) + intercept\n",
+    "  # y = (m1*x1)+(m2*x2)+(m3*x3) + c"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "source": [
+    "#NOW WE CAN MAKE PREDICTIONS\n",
+    "print(calculate_charges(19, 22.9, 0))\n",
+    "# the person would likely have just under $141 of charges of insurance!"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "141.50165456571813\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
