--- a/Linear_Regression/multiVariateLinearRegression.ipynb
+++ b/Linear_Regression/multiVariateLinearRegression.ipynb
@@ -91,6 +91,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "'''\n",
+    "predict() must follow fit(). fit() builds a model that tries to find a pattern that maps input \n",
+    "data to the labels. At this stage the input data is called the training set. \n",
+    "predict() simply asks your trained model to use those patterns to map new inputs to their labels. \n",
+    "They are the model's best guess, given what it was previously trained on, not random. \n",
+    "Optimizing the quality of those patterns so that the predictions are as accurate as possible is \n",
+    "the whole art and science of machine learning.\n",
+    "\n",
+    "Imagine I wanted to make you an expert at identifying cat breed. At first you might have no idea. \n",
+    "So first I have to train you. I show you a bunch of pictures and tell you what each cat \n",
+    "breed is (label). After a while, you start to see patterns and you take notes. Eventually you \n",
+    "start to feel like you get even the finer distinctions and feel ready to identify the cat breed\n",
+    "of any cat shown to you. Your new knowledge is called a model. This is what fit() does. \n",
+    "It builds a model through training.\n",
+    "\n",
+    "Now I start showing you pictures of cats without telling you the breed (label). \n",
+    "Using your new knowledge, notes and patterns (i.e. your model), you can now \"predict\" the \n",
+    "breed of a cat you haven't seen before (provided it's one of the breeds you've learned about \n",
+    "during training). This is what predict() does. It runs data through the model to get predictions.\n",
+    "\n",
+    "'''"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "source": [
     "#Creating new Variables\n",
