--- a/Linear_Regression/LinearRegression2.ipynb
+++ b/Linear_Regression/LinearRegression2.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "dataset=pd.read_csv('insurance.csv')\n",
+    "dataset=pd.read_csv('insurance.csvv')\n",
     "print(dataset.head())"
    ],
    "outputs": [
